objects/CM_Selected_Package__c.object
<CustomObject>
    <description>This is a link object which links Orders and Custom Packages</description>
    <fields>
        <fullName>ptt_CM_Custom_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relation to selected Custom Package</description>
        <label>CM Custom Package</label>
        <referenceTo>CM_Custom_Package__c</referenceTo>
        <relationshipName>CM_Selected_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_CM_Order__c</fullName>
        <label>CM Order</label>
        <referenceTo>ptt_cm_Order__c</referenceTo>
        <relationshipName>CM_Selected_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ptt_Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>PT - CM Selected Package</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>CM Selected Packages Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Selected Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>